--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "build:icons": "node scripts/build-icons.js",
     "generate:core": "node scripts/generate-core-icons.js",
     "generate:react": "node scripts/generate-react-components.js",
+    "generate:svg": "node scripts/generate-svg-components.js",
     "process:svg": "node scripts/process-svg.js",
+    "validate:icons": "node scripts/validate-icons.mjs",
     "prepare": "husky"
   },
   "keywords": [
@@ -29,25 +31,32 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "@types/node": "^18.16.0",
-    "esbuild": "^0.18.0",
-    "eslint": "^8.38.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.0",
-    "prettier": "^2.8.7",
-    "rollup": "^3.25.0",
-    "svgo": "^3.0.2",
-    "tsup": "^7.0.0",
-    "turbo": "^1.10.0",
-    "typescript": "^5.0.0"
+    "@svgr/cli": "^8.1.0",
+    "@svgr/core": "^8.1.0",
+    "@svgr/plugin-jsx": "^8.1.0",
+    "@svgr/plugin-svgo": "^8.1.0",
+    "@types/node": "^22.15.18",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
+    "ajv": "^8.17.1",
+    "chalk": "^5.4.1",
+    "change-case": "^5.4.4",
+    "esbuild": "^0.25.4",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-import-resolver-typescript": "^4.3.4",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.0.0",
+    "prettier": "^3.5.3",
+    "rollup": "^4.40.2",
+    "svgo": "^3.3.2",
+    "tsup": "^8.5.0",
+    "turbo": "^2.5.3",
+    "typescript": "^5.8.3"
   },
   "engines": {
     "node": ">=22.15.0"
