--- a/packages/iconiq-react/package.json
+++ b/packages/iconiq-react/package.json
@@ -36,14 +36,17 @@
     "@iconiq/shared": "workspace:*"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "eslint": "^8.38.0",
-    "react": "^18.2.0",
-    "rimraf": "^5.0.0",
-    "tsup": "^7.0.0",
-    "typescript": "^5.0.0"
+    "@types/react": "^19.1.4",
+    "eslint": "^9.26.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.40.2",
+    "tsup": "^8.5.0",
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.3"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "react": "^18.0.0 || ^19.0.0"
   }
 }
