Refactor ESLint and Prettier configurations, add TypeScript support, and enhance Turbo pipeline with caching; introduce pre-commit hook and update package scripts for linting and type checking.

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -21,7 +21,8 @@
     "dev": "tsup --watch",
     "clean": "rimraf dist",
     "lint": "eslint src --ext .ts,.tsx",
-    "lint:fix": "eslint src --ext .ts,.tsx --fix"
+    "lint:fix": "eslint src --ext .ts,.tsx --fix",
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [
     "icons",
