--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "clean": "turbo run clean",
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
-    "format": "prettier --write \"**/*.{js,ts,tsx,json,md}\"",
-    "format:check": "prettier --check \"**/*.{js,ts,tsx,json,md}\"",
+    "format:check": "prettier --cache --check --ignore-path .gitignore --ignore-path .prettierignore .",
+    "format:write": "prettier --cache --write --list-different --ignore-path .gitignore --ignore-path .prettierignore .",
+    "typecheck": "turbo run typecheck",
     "test": "turbo run test",
     "build:icons": "node scripts/build-icons.js",
     "generate:core": "node scripts/generate-core-icons.js",
