--- a/packages/iconiq-react/package.json
+++ b/packages/iconiq-react/package.json
@@ -22,6 +22,7 @@
     "clean": "rimraf dist",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
+    "typecheck": "tsc --noEmit",
     "generate-components": "node ../../scripts/generate-react-components.js"
   },
   "keywords": [
