--- a/package.json
+++ b/package.json
@@ -54,8 +54,11 @@
     "lint-staged": "^16.0.0",
     "prettier": "^3.5.3",
     "rollup": "^4.40.2",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@rollup/plugin-terser": "^0.4.4",
+    "rollup-plugin-dts": "^6.1.0",
     "svgo": "^3.3.2",
-    "tsup": "^8.5.0",
     "turbo": "^2.5.3",
     "typescript": "^5.8.3"
   },
