--- a/packages/iconiq-react/package.json
+++ b/packages/iconiq-react/package.json
@@ -17,8 +17,8 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
     "clean": "rimraf dist",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
@@ -43,7 +43,10 @@
     "react-dom": "^19.1.0",
     "rimraf": "^6.0.1",
     "rollup": "^4.40.2",
-    "tsup": "^8.5.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@rollup/plugin-terser": "^0.4.4",
+    "rollup-plugin-dts": "^6.1.0",
     "typescript": "^5.8.3",
     "vitest": "^3.1.3"
   },
