--- a/packages/iconiq/package.json
+++ b/packages/iconiq/package.json
@@ -22,8 +22,8 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
     "clean": "rimraf dist",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
@@ -41,7 +41,11 @@
   "devDependencies": {
     "eslint": "^9.26.0",
     "rimraf": "^6.0.1",
-    "tsup": "^8.5.0",
+    "rollup": "^4.40.2",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@rollup/plugin-terser": "^0.4.4",
+    "rollup-plugin-dts": "^6.1.0",
     "typescript": "^5.8.3"
   }
 }
