Refactor package configurations to integrate @repo/typescript-config across multiple packages, update TypeScript settings for declaration generation, and enhance clean script in package.json. Adjust pnpm workspace to include only built dependencies.

--- a/packages/iconiq-react/package.json
+++ b/packages/iconiq-react/package.json
@@ -37,6 +37,7 @@
     "@iconiq/shared": "workspace:*"
   },
   "devDependencies": {
+    "@repo/typescript-config": "workspace:*",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
