--- a/packages/iconiq/tsconfig.json
+++ b/packages/iconiq/tsconfig.json
@@ -1,9 +1,12 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "@repo/typescript-config/react-library",
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
-    "composite": true
+    "composite": true,
+    "declaration": true,
+    "noEmit": false,
+    "emitDeclarationOnly": true
   },
   "include": ["src/**/*"],
   "references": [{ "path": "../shared" }]
