--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
-    "clean": "turbo run clean",
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
     "format:check": "prettier --cache --check --ignore-path .gitignore --ignore-path .prettierignore .",
@@ -20,7 +19,8 @@
     "generate:svg": "node scripts/generate-svg-components.js",
     "process:svg": "node scripts/process-svg.js",
     "validate:icons": "node scripts/validate-icons.mjs",
-    "prepare": "husky"
+    "prepare": "husky",
+    "clean": "turbo run clean && rimraf .next .turbo && rimraf node_modules"
   },
   "keywords": [
     "icons",
@@ -32,6 +32,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@repo/typescript-config": "workspace:*",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
@@ -56,6 +57,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.0.0",
     "prettier": "^3.5.3",
+    "rimraf": "^6.0.1",
     "rollup": "^4.40.2",
     "rollup-plugin-dts": "^6.2.1",
     "svgo": "^3.3.2",
