Enhance testing and coverage setup across packages by integrating Vitest, adding coverage reporting configurations, and updating package.json scripts. Refactor icon design guide documentation for clarity and consistency, and introduce utility functions for prop sanitization in shared components.

--- a/packages/iconiq-react/tsconfig.json
+++ b/packages/iconiq-react/tsconfig.json
@@ -2,13 +2,16 @@
   "extends": "@repo/typescript-config/react-library",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": ".",
     "composite": true,
     "jsx": "react-jsx",
     "declaration": true,
     "noEmit": false,
     "emitDeclarationOnly": true
   },
-  "include": ["src/**/*"],
-  "references": [{ "path": "../shared" }, { "path": "../iconiq" }]
+  "include": ["src/**/*", "tests/**/*"],
+  "references": [{ "path": "../shared" }, { "path": "../iconiq" }],
+  "vitest": {
+    "include": ["**/*.test.ts"]
+  }
 }
