--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,7 @@
 version: 2
 updates:
-  # Enable version updates for npm
-  - package-ecosystem: "npm"
+  # Enable version updates for pnpm
+  - package-ecosystem: "pnpm"
     directory: "/"
     schedule:
       interval: "weekly"
