--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --cache --write --list-different --ignore-path .gitignore --ignore-path .prettierignore .",
     "typecheck": "turbo run typecheck",
     "test": "turbo run test",
+    "test:coverage": "turbo run test:coverage",
     "build:icons": "node scripts/build-icons.js",
     "generate:core": "node scripts/generate-core-icons.js",
     "generate:react": "node scripts/generate-react-components.js",
@@ -43,11 +44,12 @@
     "@types/node": "^22.15.18",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
+    "@vitest/coverage-istanbul": "^3.1.3",
     "ajv": "^8.17.1",
     "chalk": "^5.4.1",
     "change-case": "^5.4.4",
     "esbuild": "^0.25.4",
-    "eslint": "^9.26.0",
+    "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-import-resolver-typescript": "^4.3.4",
     "eslint-plugin-import": "^2.31.0",
@@ -62,7 +64,8 @@
     "rollup-plugin-dts": "^6.2.1",
     "svgo": "^3.3.2",
     "turbo": "^2.5.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.3"
   },
   "engines": {
     "node": ">=22.15.0"
