--- a/packages/iconiq-react/package.json
+++ b/packages/iconiq-react/package.json
@@ -23,7 +23,9 @@
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "typecheck": "tsc --noEmit",
-    "generate-components": "node ../../scripts/generate-react-components.js"
+    "generate-components": "node ../../scripts/generate-react-components.js",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [
     "icons",
@@ -41,8 +43,12 @@
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^19.1.4",
-    "eslint": "^9.26.0",
+    "@vitest/coverage-istanbul": "^3.1.3",
+    "eslint": "^9.27.0",
+    "jsdom": "^26.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "rimraf": "^6.0.1",
