--- a/packages/iconiq/package.json
+++ b/packages/iconiq/package.json
@@ -27,7 +27,9 @@
     "clean": "rimraf dist",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [
     "icons",
@@ -43,10 +45,12 @@
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
-    "eslint": "^9.26.0",
+    "@vitest/coverage-istanbul": "^3.1.3",
+    "eslint": "^9.27.0",
     "rimraf": "^6.0.1",
     "rollup": "^4.40.2",
     "rollup-plugin-dts": "^6.2.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.3"
   }
 }
