--- a/packages/iconiq/tsconfig.json
+++ b/packages/iconiq/tsconfig.json
@@ -2,12 +2,12 @@
   "extends": "@repo/typescript-config/react-library",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": ".",
     "composite": true,
     "declaration": true,
     "noEmit": false,
     "emitDeclarationOnly": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "tests/**/*"],
   "references": [{ "path": "../shared" }]
 }
