--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -22,7 +22,9 @@
     "clean": "rimraf dist",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [
     "icons",
@@ -36,12 +38,14 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/react": "^19.1.4",
-    "eslint": "^9.26.0",
+    "@vitest/coverage-istanbul": "^3.1.3",
+    "eslint": "^9.27.0",
     "react": "^19.1.0",
     "rimraf": "^6.0.1",
     "rollup": "^4.40.2",
     "rollup-plugin-dts": "^6.2.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.3"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
