--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -2,11 +2,11 @@
   "extends": "@repo/typescript-config/react-library",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": ".",
     "composite": true,
     "declaration": true,
     "noEmit": false,
     "emitDeclarationOnly": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "tests/**/*"]
 }
