--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -1,18 +1,21 @@
-name: Release
+name: Changeset Version
 
 on:
   push:
     branches:
       - main
+    paths:
+      - '.changeset/**'
+
+concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
-  release:
-    name: Release
+  version:
+    name: Changeset Version
     runs-on: ubuntu-latest
     permissions:
       contents: write
       pull-requests: write
-      packages: write
 
     steps:
       - name: Checkout Repo
@@ -24,7 +27,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-          registry-url: 'https://registry.npmjs.org'
 
       - name: Install pnpm
         uses: pnpm/action-setup@v2
@@ -32,26 +34,14 @@ jobs:
           version: 10
           run_install: false
 
-      - name: Setup pnpm config
-        run: pnpm config set store-dir ${{ github.workspace }}/.pnpm-store
-
       - name: Install Dependencies
         run: pnpm install
 
-      - name: Build
-        run: pnpm build
-
-      - name: Run tests
-        run: pnpm test
-
-      - name: Create Release Pull Request or Publish
-        id: changesets
+      - name: Create version PR
         uses: changesets/action@v1
         with:
-          publish: pnpm release
           version: pnpm version
           commit: "chore: version packages"
           title: "chore: version packages"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
