feat: Add accessibility and visual regression testing workflows for Storybook components

--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "typecheck": "turbo run typecheck",
     "test": "turbo run test",
     "test:coverage": "turbo run test:coverage",
+    "test:ssr": "turbo run test:ssr --filter=iconiq-ssr-testing",
     "build:icons": "node scripts/build-icons.js",
     "generate:core": "node scripts/generate-core-icons.js",
     "generate:react": "node scripts/generate-react-components.js",
     "generate:svg": "node scripts/generate-svg-components.js",
     "process:svg": "node scripts/process-svg.js",
     "validate:icons": "node scripts/validate-icons.mjs",
+    "storybook": "turbo run storybook --filter=iconiq-storybook",
+    "storybook:build": "turbo run storybook:build --filter=iconiq-storybook",
+    "storybook:test": "turbo run storybook:test --filter=iconiq-storybook",
     "changeset": "changeset",
     "version": "changeset version",
     "release": "changeset publish",
