feat(package.json): Update test commands to include package filtering for improved test execution

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "format:check": "prettier --cache --check --ignore-path .gitignore --ignore-path .prettierignore .",
     "format": "prettier --cache --write --list-different --ignore-path .gitignore --ignore-path .prettierignore .",
     "typecheck": "turbo run typecheck",
-    "test": "turbo run test",
-    "test:coverage": "turbo run test:coverage",
+    "test": "turbo run test --filter='./packages/*'",
+    "test:coverage": "turbo run test:coverage --filter='./packages/*'",
     "test:ssr": "turbo run test:ssr --filter=iconiq-ssr-testing",
     "build:icons": "node scripts/build-icons.js",
     "generate:core": "node scripts/generate-core-icons.js",
